[init] successfull resource deploy
